<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/11 20:45
 */

namespace DesignPatterns\Creational\Builder\Parts;

class Door
{

}
