<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/11 20:43
 */

namespace DesignPatterns\Creational\Builder\Vehicle;

class Car extends Vehicle
{

}
